# ChangeLog for app-forensics/rkhunter
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-forensics/rkhunter/ChangeLog,v 1.90 2012/04/09 03:43:46 darkside Exp $

*rkhunter-1.3.8-r1 (09 Apr 2012)

  09 Apr 2012; Jeremy Olexa <darkside@gentoo.org> +rkhunter-1.3.8-r1.ebuild,
  +files/rkhunter-1.3.8-file-compat.patch:
  Revision bump to add upstream patch for sys-apps/file compatibility

  12 Jan 2012; Tim Harder <radhermit@gentoo.org> -files/rkhunter-ppc64.patch,
  -rkhunter-1.3.4-r3.ebuild, -rkhunter-1.3.6.ebuild:
  Remove old.

  11 Jan 2012; Brent Baude <ranger@gentoo.org> rkhunter-1.3.8.ebuild:
  Marking rkhunter-1.3.8 ppc for bug 382453

  08 Oct 2011; Raúl Porcel <armin76@gentoo.org> rkhunter-1.3.4-r3.ebuild,
  rkhunter-1.3.6.ebuild, rkhunter-1.3.8.ebuild:
  Drop alpha/sparc keywords

  15 Sep 2011; Andreas Schuerch <nativemad@gentoo.org> rkhunter-1.3.8.ebuild:
  x86 stable, thanks JD for testing, bug 382453

  13 Sep 2011; Markos Chandras <hwoarang@gentoo.org> rkhunter-1.3.8.ebuild:
  Stable on amd64 wrt bug #382453

  10 Sep 2011; Tim Harder <radhermit@gentoo.org> rkhunter-1.3.8.ebuild:
  Update to EAPI 4 and migrate to the bash-completion-r1 eclass.

  11 Jul 2011; Tim Harder <radhermit@gentoo.org> rkhunter-1.3.4-r3.ebuild,
  rkhunter-1.3.6.ebuild, rkhunter-1.3.8.ebuild:
  Mention mail client alternatives (bug #331947).

  09 May 2011; Jeroen Roovers <jer@gentoo.org> -files/rkhunter.cron:
  Remove unused file thanks to jalan (bug #341051).

*rkhunter-1.3.8 (09 May 2011)

  09 May 2011; Jeroen Roovers <jer@gentoo.org> +rkhunter-1.3.8.ebuild:
  Version bump thanks to Max Nokhrin (bug #346617).

  09 Jul 2010; Jeroen Roovers <jer@gentoo.org> rkhunter-1.3.4-r3.ebuild,
  rkhunter-1.3.6.ebuild:
  Replace RDEPEND on virtual/mailx to elog advice thanks to Aaron Slunt (bug
  #327547, replace einfo with elog as well).

  08 Jul 2010; Jeroen Roovers <jer@gentoo.org> rkhunter-1.3.4-r3.ebuild: