@@ -1,9 +1,25 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX rkhunter-1.3.8-file-compat.patch 2631 RMD160 a178f8e2202738061d52a8140180605aae772f36 SHA1 9786d9ab2cd5028260201bccd62aa77091b2f6ea SHA256 a73563311e29321730a8afd619822f34d8b685f6202bc61ac8e5b81d947a2ede
 AUX rkhunter-1.3.cron 4050 RMD160 b1c567e64fe523ccdde04d13320c2d26e9eebe07 SHA1 fb909c818805d7f65a1c23b5727f0912bf813157 SHA256 011216f98936daa079a7c9db4bec8620b0dae793b2de7649f532bbc15c16f751
 AUX rkhunter.bash-completion 2628 RMD160 f408877f6b8d38bfb17af6074e5a1fbecc134cd6 SHA1 a0a007ecda0de61d5e8044672048c6f406183cfb SHA256 d99776d6b300697cb6571e409e6c93bc96e68980922ee22b76eda56f26d0d970
 AUX rkhunter.conf.patch 786 RMD160 6d645ca67b77e3c6abacbc2c0de259e5e6204852 SHA1 9dbb80960b2273a7fb8d4fcd1b4ccb758b91c5cc SHA256 2ca73ff5b9e7b6b3b1c65948813f5124662b8fb6087108adebccd9aa5e4a19d8
 DIST rkhunter-1.3.8.tar.gz 241551 RMD160 7c013fd68675d5f859db0430c04673154209a64e SHA1 f4b0c3f149213aa50e00c9658ad8a4a79861621f SHA256 fb1fb8bac53bab476142b5556140c59d589bc0f45d3dc058f400f2edada77a33
+DIST rkhunter-1.4.0.tar.gz 244211 RMD160 a0b1ef0e70cc7a2f5b495403cc9dcb56d1494d2e SHA1 22546370647b79abce783d2a2d29352843d1b617 SHA256 8a03d6add50663531994d55aff058eced74c64df948b88176621cd761b68ccf9
 EBUILD rkhunter-1.3.8-r1.ebuild 1626 RMD160 3a4feddb1cd3b69eb0d2a2e17ccd53594270d0e7 SHA1 9fbcb49ac2390efbc5635734a783947bc5cb47fe SHA256 595d5911b00813e0bcaabc71da75dfd9b52ff75a60faa28a3e36202ecb250ada
 EBUILD rkhunter-1.3.8.ebuild 1573 RMD160 414a1f7f999893de87b361b06fc4162c54ea7dc3 SHA1 76417428b76b8d8aca417cef93c03826ea83c317 SHA256 168d0cedaecde7b6e708ef6c6cdea35bf68ddce951f1c3f0957890483ac7f21b
-MISC ChangeLog 15573 RMD160 f3bd853b4d9b67907536905c6cb2bb0ce12a1bd9 SHA1 31bcdcbf3f64f01df7eaee76cc4d1784174b7c8f SHA256 3cacade13c89cbb32fb357420babb452c8d6e9d08c9cc5185e4a170d66d64d55
+EBUILD rkhunter-1.4.0.ebuild 1579 RMD160 1ba303a17812825c68cf1db6931eb8a7329e3092 SHA1 e981d4a4badd6e94ba3d7da7aa087ca2b866098e SHA256 fee132e7fb51b8cded31c360cdb44f29e198dc9a0a40688de4a21677ce2ed1dc
+MISC ChangeLog 15695 RMD160 f48f54bc2b838bd0d8f9492174c46ea6780b5918 SHA1 c90d79d7fa1d40e0ed411c5dbc07b571c17b9751 SHA256 c1bca3a72422da1e1088fc43bd6bf684f2694b04a1967e76723fe71320fc1db1
 MISC metadata.xml 164 RMD160 7cd3bffc39aa87dceaef97342b19343323175238 SHA1 97b9dc021ecbad46bf0f3a99aeb204f45792faeb SHA256 e8d7dfabbaf13302703ccc3428fa0ecedf5d444e0c58692ebbd03c5bd0d9240f
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCgAGBQJPn2fPAAoJEEqz6FtPBkyjuPIH/R+KmHw+FOlWV2YhttHj8Bf2
+tejZF7RiK6VvbnWuwmCZzVKkWJk6S7dFP5XV3xSJCLK9fNGfNV2l2CuhTaaccKUr
+Yq8xkQ8BF4fiLoYkPVmdbQU0OSJfbAxc7yzv08cnA16B+/1/rJXWJTrq017MDVf8
+kzW7i1q9Vh5BnXOpklcHZeI9BLwVVAPEvn+g1zjuu4iCl4C+qlXIto+CpOn2LB1X
+lGDsH5GtiFrYJ1nETDflZH+vzAArj8QBKGI0/fe4KsTQXuawXCzPThZg6HL75i2D
+NbYw3q5OjOdPXkl0bvsyyD2lwgdhmAnc355wvS2+opRaTzvzssvM4HlcuZBOeGk=
+=NIL7
+-----END PGP SIGNATURE-----
