@@ -1,6 +1,11 @@
 # ChangeLog for app-forensics/rkhunter
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/rkhunter/ChangeLog,v 1.90 2012/04/09 03:43:46 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/rkhunter/ChangeLog,v 1.91 2012/05/01 04:34:18 radhermit Exp $
+
+*rkhunter-1.4.0 (01 May 2012)
+
+  01 May 2012; Tim Harder <radhermit@gentoo.org> +rkhunter-1.4.0.ebuild:
+  Version bump.
 
 *rkhunter-1.3.8-r1 (09 Apr 2012)
 
